welcome.lessons.welcome.methods.picture.PictureMono3.scala.error
PictureMono3:65: error: Unmatched closing brace '}' ignored here
}
^