welcome.lessons.welcome.methods.picture.PictureMono3.scala.code
override def run() {
  for (i <- 1 to 3)
  {
    diagonale()
  }
}

def diagonale()
{
  for (i <- 1 to 3)
    {
      faireLigne()
      gauche()
      for (i <- 1 to 7)
      {
        avance()
      }
      droite()
    }
  }

  def faireV()
    {
    avance()
    avance()
    baisseBrosse()
    leveBrosse()
    avance()
    gauche()
    avance()
    baisseBrosse()
    leveBrosse()
    recule()
    droite()
    avance()
    baisseBrosse()
    leveBrosse()
    avance()
    avance()
    gauche()
    }

  def faireMotif()
  {

    for (i <- 1 to 4)
    {
      faireV()
    }
    for (i <- 1 to 7)
    {
      avance()
    }
  }

  def faireLigne()
  {
    for (i <- 1 to 3)
    {
      faireMotif()
    }
  }
}